# ml-inference-gateway

./: .gitignore  LIMITATIONS.md  README.md  docker-compose.yml  prometheus.yml
gateway/: Dockerfile  pom.xml
gateway/src/main/java/com/prathamesh/inferencegateway/: InferenceGatewayApplication.java
gateway/src/main/java/com/prathamesh/inferencegateway/config/: GrpcClientConfig.java  VirtualThreadConfig.java
gateway/src/main/java/com/prathamesh/inferencegateway/controller/: PredictionController.java
gateway/src/main/java/com/prathamesh/inferencegateway/exception/: GlobalExceptionHandler.java
gateway/src/main/java/com/prathamesh/inferencegateway/grpc/: InferenceGrpcClient.java
gateway/src/main/java/com/prathamesh/inferencegateway/model/: IdempotencyRecord.java  PredictionRequestDto.java  PredictionResponseDto.java
gateway/src/main/java/com/prathamesh/inferencegateway/repository/: IdempotencyRecordRepository.java
gateway/src/main/java/com/prathamesh/inferencegateway/service/: AdaptiveBatcher.java  IdempotencyService.java  RateLimiterService.java
gateway/src/main/resources/: application.yml
gateway/src/main/resources/db/migration/: V1__create_idempotency_table.sql
load-testing/: pom.xml
model-server/: Dockerfile  pyproject.toml  run_tests.py
model-server/src/: fault_injection.py  inference.py  inference_pb2.py  inference_pb2_grpc.py  model_loader.py  server.py
model-server/tests/: test_fault_injection.py  test_inference.py  test_model_loader.py
model-training/: requirements.txt  train_model.py
models/: .gitkeep
proto/: inference.proto
(+1 files in other folders)
